[package]
name = "csrf-token"
version = "0.2.2"
authors = ["Yusuke Yoshimoto <y.yoshimoto@f-s-r.jp>"]
publish = false

[dependencies]
chrono = "0.4.11"
rand = "0.7.3"
byteorder = "1.3.4"
failure = "0.1.7"
hmac = "0.7.1"
sha2 = "0.8.1"

[dev-dependencies]
base64 = "0.12.0"
lazy_static = "1.4.0"
hex = "0.4.2"
actix-web = "2.0.0"
mime = "0.3.16"
serde_derive = "1.0.106"
serde = "1.0.106"
futures = "0.3.4"
